@@ -565,6 +565,7 @@ rb_enc_init(void)
     ENCDB_REGISTER("UTF-32LE", UTF_32LE);
     ENCDB_REGISTER("UTF-16", UTF_16);
     ENCDB_REGISTER("UTF-32", UTF_32);
+    ENCDB_REGISTER("UTF8-MAC", UTF8_MAC);
 #undef ENCDB_REGISTER
 #endif
     enc_table.count = ENCINDEX_BUILTIN_MAX;
